[gd_scene load_steps=15 format=3 uid="uid://d13rw14lham2w"]

[ext_resource type="Script" path="res://assets/scripts/laser.gd" id="1_7qa0d"]
[ext_resource type="Texture2D" uid="uid://bt6b64a83i8x1" path="res://assets/sprites/puzzle_mechanics/22-224089_red-glowing-eyes-png-circle.png" id="2_r6qtf"]
[ext_resource type="Texture2D" uid="uid://svhcsfapmju7" path="res://assets/sprites/puzzle_mechanics/laserSpriteSheet.png" id="3_xphe0"]

[sub_resource type="Environment" id="Environment_gktim"]
background_mode = 3
glow_levels/2 = 6.98
glow_levels/4 = 1.83
glow_levels/5 = 2.42
glow_levels/6 = 3.16
glow_levels/7 = 1.0
glow_intensity = 8.0
glow_strength = 1.31
glow_blend_mode = 0

[sub_resource type="Gradient" id="Gradient_wwult"]
offsets = PackedFloat32Array(0, 0.011236, 0.0674157, 0.966292, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 0.211765, 0.211765, 1, 1, 0.371835, 0.371835, 0.796925, 1, 0.489438, 0.489438, 0.647727, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_quriq"]
gradient = SubResource("Gradient_wwult")

[sub_resource type="Curve" id="Curve_e8xj6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_svx07"]
width = 2048
curve = SubResource("Curve_e8xj6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pa4gs"]
particle_flag_disable_z = true
spread = 21.27
gravity = Vector3(0, 0, 0)
initial_velocity_min = 128.0
initial_velocity_max = 128.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.0
scale_max = 0.01
scale_curve = SubResource("CurveTexture_svx07")
color_ramp = SubResource("GradientTexture1D_quriq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sgsjb"]
particle_flag_disable_z = true
spread = 21.27
gravity = Vector3(0, 0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.0
scale_max = 0.01
scale_curve = SubResource("CurveTexture_svx07")
color_ramp = SubResource("GradientTexture1D_quriq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7rkf5"]
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
tangential_accel_max = 100.0
scale_min = 0.0
scale_max = 0.01

[sub_resource type="Animation" id="Animation_uxiuh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_enbka"]
resource_name = "laserActivate"
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fcjn"]
_data = {
"RESET": SubResource("Animation_uxiuh"),
"laserActivate": SubResource("Animation_enbka")
}

[node name="laser" type="RayCast2D"]
position = Vector2(46, 65)
target_position = Vector2(500, 0)
collision_mask = 129
script = ExtResource("1_7qa0d")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gktim")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 66, 0)
width = 0.0
default_color = Color(1, 0.494118, 0.431373, 1)

[node name="castingParticle" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_pa4gs")
texture = ExtResource("2_r6qtf")
lifetime = 0.3

[node name="collisionParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_sgsjb")
texture = ExtResource("2_r6qtf")
lifetime = 0.3

[node name="beamParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_7rkf5")
texture = ExtResource("2_r6qtf")
lifetime = 0.3

[node name="LaserSpriteSheet" type="Sprite2D" parent="."]
position = Vector2(-10, 0)
rotation = 1.5708
texture = ExtResource("3_xphe0")
hframes = 17
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6fcjn")
}

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="text" type="Node2D" parent="."]
rotation = -1.5708

[node name="RichTextLabel" type="RichTextLabel" parent="text"]
offset_left = 17.0
offset_top = -2.0
offset_right = 202.0
offset_bottom = 101.0
text = "Timer: "

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
